# ccproxypal

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json
.github/workflows/: release.yml
npm-pkg/: README.md  package.json
npm-pkg/src/: adapter.js  anti-ban.js  configure.js  pool.js  server.js  token.js  tunnel.js
scripts/: release.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  oauth.rs  state.rs  telegram.rs  tunnel.rs
src-tauri/src/proxy/: adapter.rs  client.rs  mod.rs  server.rs
src/components/: AnalyticsPanel.tsx  ClientPanel.tsx  Dashboard.tsx  LogPanel.tsx  PoolPanel.tsx  ProxyPanel.tsx  SettingsPanel.tsx  ToolsPanel.tsx
src/components/ui/: Button.tsx  Card.tsx  InfoRow.tsx  Input.tsx  SegmentedControl.tsx  StatusDot.tsx  StepCard.tsx  Toast.tsx
src/lib/: invoke.ts  logStore.ts
