[package]
name = "ccproxypal"
version = "0.1.2"
description = "ccproxypal — Claude Code OAuth proxy desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "ccproxypal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for token refresh + Claude API calls
# Use rustls to avoid needing OpenSSL system libraries (esp. for Linux ARM64 cross-compile)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# HTTP proxy server
axum = { version = "0.7", features = ["http1", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# SQLite analytics
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
